fixed drop down alignment

--- a/public/assets/output.css
+++ b/public/assets/output.css
@@ -1423,6 +1423,11 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .pt-4 {
   padding-top: 1rem;
 }
